--- a/game-db/package.json
+++ b/game-db/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json-server": "json-server --watch people.json --port 3000"
   },
   "dependencies": {
     "react": "^18.2.0",
