--- a/game-db/package.json
+++ b/game-db/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "json-server": "json-server --watch people.json --port 3000"
+    "json-server": "json-server --watch games.json --port 3001"
   },
   "dependencies": {
     "react": "^18.2.0",
